# 25-ID2223-mlfs-book

./: .gitignore  README.md
.github/workflows/: air-quality-daily.yml  fingrid-energy-daily.yml
air_quality_model/: model.json
airquality/: setup-env.sh  tasks.py
airquality/notebooks/: 1_air_quality_feature_backfill.ipynb
data/: weather_finland_historical.csv
docs/: README.md
docs/_includes/: fingrid.html
docs/fingrid/: index.md
fingrid/: README.md  check_schema.py  pyproject.toml  requirements.txt  setup-conda.ps1  setup-env.ps1  setup-env.sh  tasks.py
fingrid/notebooks/: 1_backfill_feature_group.ipynb  2_daily_feature_pipeline.ipynb  3_training_pipeline.ipynb  3b_training_pipeline_with_lags.ipynb  4_inference_pipeline.ipynb
mlfs/: config.py
notebooks/airquality/: 1_air_quality_feature_backfill.ipynb
notebooks/fingrid/: 1_backfill_feature_group.ipynb  2_daily_feature_pipeline.ipynb  3_training_pipeline.ipynb  4_inference_pipeline.ipynb
