[project]
name = "mlfs-fingrid-energy"
version = "0.1.0"
description = "Build Energy Consumption Forecasting System with Hopsworks and Fingrid"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

[tool.poe]
executor.type = "uv"

[tool.poe.tasks]
test         = "pytest --cov=my_app"
serve.script = "my_app.service:run(debug=True)"

[tool.pytest.ini_options]
addopts = "-v --tb=short"

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools]
packages = []

# Black formatting
[tool.black]
line-length = 150
include = '\.pyi?$'
exclude = '''
/(
      .eggs
    | .git
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

# iSort
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = "conda"

[tool.flake8]
exclude = "venv"
ignore = ["E501", "W503", "E226"]

[tool.ruff]
line-length = 120
exclude = ["excluded_file.py"]
lint.select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
]
lint.ignore = [
    "E501",
    "C901",
]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
mlfs-book = { path = ".", editable = true }
